adjust layout, fix item card spacing, add style to item type headers, adjust mobile screen layout

--- a/src/components/Ex.css
+++ b/src/components/Ex.css
@@ -4,11 +4,11 @@
     align-items: center;
     background: #fff;
     box-shadow: 0 5px 10px rgb(0 0 0 / 10%);
-    padding-bottom:10px;
+    padding: 10px;
     margin: 15px;
 }
 
-.ex h3, h4 {
+.ex h2 {
     font-family: 'Domaine Display';
 }
 
