--- a/src/components/outline.css
+++ b/src/components/outline.css
@@ -16,7 +16,7 @@
 .item-container {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
 }
 
